Create outputs/restored_imgs Automatically
Addressing an issue where the output folder doesn't automatically get created.

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -167,6 +167,9 @@
         "restoredFramesPath = outputPath + '/restored_imgs/'\n",
         "processedVideoOutputPath = outputPath\n",
         "\n",
+        "if not os.path.exists(restoredFramesPath):\n",
+        "  os.makedirs(restoredFramesPath)\n",
+        "\n",
         "dir_list = os.listdir(restoredFramesPath)\n",
         "dir_list.sort()\n",
         "\n",
